[package]
# The name of the executable file should be the same as the name of the resource(.rc) file in the resource folder, 
# otherwise an error will be reported during compilation.
name = "decrypt"
version = "5.2.1"
edition = "2024"

[lib]
name = "decrypt"
crate-type = ["cdylib"]
path = "lib/lib.rs"

[[bin]]
name = "decrypt"
path = "src/decrypt.rs"

[[bin]]
name = "launcher"
path = "src/launcher.rs"

[dependencies]
# fltk = "1.5.22"
fltk = { version = "1.5.22", features = ["fltk-bundled"] }
fltk-theme = "0.7.9"
libloading = "0.9.0"
pelite = "0.10.0"
thiserror = "2.0.18"

[build-dependencies]
fl2rust = "0.7.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
